tests/copy_str_from_u8_slice_bad.stderr
tests/copy_str_from_u8_slice_bad.hop:5:16: error: HOP2004: type mismatch: cannot use expression of type *[u8] as *str
