tests/copy_str_from_u8_slice_bad.hop
// Verifies copy string from u8 slice is rejected.
fn main() {
	var dst *str = "abc"
	var raw [u8 3]
	_ = copy(dst, raw[:])
}
